@@ -29,6 +29,7 @@
 		<echo message="      tools   --- Compiles the tools: The browser and main class" />
 		<echo message="      samples --- Compiles the samples in the samples package" />
 		<echo message="      jar     --- Creates the jmdns.jar file " />
+		<echo message="      bundle  --- Creates OSGi javax.jmdns_${version}.jar bundle" />
 		<echo message="      javadoc --- Creates the javadoc docs " />
 		<echo message="      release --- Creates a release " />
 		<echo message="      clean   --- Cleanup time! " />
@@ -65,6 +66,26 @@
 		<jar destfile="${lib}/jmdns.jar" manifest="${lib}/jmdns.manifest" basedir="${dest}" includes="**/*.class" />
 	</target>
 
+	<target name="bundle" description="Creates an OSGi bundle" depends="jar">
+		<get src="http://www.aqute.biz/repo/biz/aQute/bnd/0.0.384/bnd-0.0.384.jar" dest="bnd.jar" />
+		<taskdef resource="aQute/bnd/ant/taskdef.properties" classpath="bnd.jar" />
+		<echo file="jmdns.bnd" append="false">
+				Bundle-Version: ${version}
+				Bundle-Name: JmDNS is a java implementation of the IETF draft RFP multicast extensions for DNS
+				Bundle-SymbolicName: javax.jmdns
+				Bundle-Vendor: jmdns.sourceforge.net
+				Bundle-RequiredExecutionEnvironment: J2SE-1.5
+				<!-- Hide non API packages -->
+				Private-Package: com.strangeberry.jmdns.tools,samples
+				<!-- Do not import anything -->
+				Import-Package:
+				<!-- whenever API is changed, increment this version number according to OSGi spec: -->
+			<!-- API breakage: incr major, Feature addition: incr: minor -->
+				Export-Package: javax.jmdns;version="3.1.0"
+			</echo>
+		<bndwrap definitions="." jars="${lib}/jmdns.jar" output="${lib}/javax.jmdns_${version}.jar" />
+	</target>
+
 	<target name="javadoc" depends="build" description="Create the java doc">
 		<javadoc destdir="${doc}" author="true" version="true" header="JmDNS ${version}" windowtitle="JmDNS">
 			<fileset dir="${src}" defaultexcludes="yes">
@@ -72,23 +93,25 @@
 				<include name="com/**/*.java" />
 			</fileset>
 
-			<doctitle><![CDATA[<h1>JmDNS</h1>]]></doctitle>
+			<doctitle>
+				<![CDATA[<h1>JmDNS</h1>]]></doctitle>
+
 		</javadoc>
 	</target>
 
-	<target name="release" depends="build,tools,javadoc,jar" description="Create a release">
+	<target name="release" depends="build,tools,javadoc,jar,bundle" description="Create a release">
 		<delete dir="jmdns-${version}" />
 		<copy todir="jmdns-${version}">
 			<fileset dir="." includes="*.txt" />
 			<fileset dir="." includes="NOTICE" />
 			<fileset dir="." includes="LICENSE" />
-		    <fileset dir="." includes="lib/jmdns.jar"/>
-			<fileset dir="." includes="lib/jmdns.manifest"/>
-			<fileset dir="." includes="src/**/*.java"/>
-			<fileset dir="." includes="test/**/*.java"/>
-			<fileset dir="." includes="docs/**"/>
-			<fileset dir="." includes="build.xml"/>
-			<fileset dir="." includes="fulllogging.properties"/>
+			<fileset dir="." includes="lib/jmdns.jar" />
+			<fileset dir="." includes="lib/jmdns.manifest" />
+			<fileset dir="." includes="src/**/*.java" />
+			<fileset dir="." includes="test/**/*.java" />
+			<fileset dir="." includes="docs/**" />
+			<fileset dir="." includes="build.xml" />
+			<fileset dir="." includes="fulllogging.properties" />
 		</copy>
 		<zip destfile="jmdns-${version}.zip">
 			<fileset dir="." includes="jmdns-${version}/**" />
@@ -106,6 +129,8 @@
 			<fileset dir="${reports}" includes="**" />
 			<fileset dir="${lib}" includes="*.jar" />
 			<fileset dir="." includes="jmdns-**" />
+			<fileset dir="." includes="*.bnd" />
+			<fileset dir="." includes="bnd.jar" />
 		</delete>
 	</target>
 
